--- a/intro/users.html
+++ b/intro/users.html
@@ -214,7 +214,7 @@
 			<div class="helpdesk-button"><a href="/lost-password/">Lost Password</a></div>
 			<div class="helpdesk-button"><a href="/how-to-cancel/">How to cancel</a></div>
 			<div class="helpdesk-button"><a href="/billing-support/">Billing Support</a></div>
-			<div class="helpdesk-button"><a href="/become-a-timtales-man/">Become a Timtales Man</a></div>
+			<div class="helpdesk-button"><a href="/become-a-timtales-man/">Become a nickimodels Man</a></div>
 			<div class="helpdesk-button last"><a href="/contact-us/">Contact Us</a></div>
 		</div>
 	</div>
